# rec_llm_kernels

./: .gitignore  CMakeLists.txt  INF2.md  README  README.md  ROADMAP.md  __init__.py  setup.py
apps/fake_trainer/: Dockerfile  app.py  requirements.txt
apps/inference_server/: Dockerfile  app.py
csrc/: binding.cpp  flash_att.cu  paged_attention_decode.cu  paged_cache.cu
cuda/: CMakeLists.txt  README.md  setup.py
cuda/csrc/: binding.cpp  paged_cache.cu
cuda/csrc/backend/: rms_norm_kernel.cu  rope_kernel.cu
cuda/python/rec_llm_kernels/: __init__.py  ops.py
docs/: INF2.md  README.md  ROADMAP.md
k8s/: 00-namespace.yaml  01-model-configmap.yaml  10-inference-deployment.yaml  11-inference-service.yaml  20-trainer-rbac.yaml  21-trainer-deployment.yaml  22-trainer-service.yaml  README.md
neuron/: README.md  RELEASING.md  pyproject.toml
neuron/src/rec_llm_kernels_neuron/: __init__.py  cli.py  ops.py  testing.py
neuron/src/rec_llm_kernels_neuron/tests/: __init__.py  test_backend_ops.py  test_flash_attention.py
rec_llm/engine/: __init__.py
rec_llm/model_executor/: layers.py
rec_llm/model_executor/models/: llama.py
rec_llm/ops/: paged_cache.py
rec_llm_kernels/: ops.py
rec_llm_kernels_neuron/: __init__.py  ops.py
runtime/: README.md  pyproject.toml
runtime/src/rec_llm_runtime/engine/: __init__.py
runtime/src/rec_llm_runtime/model_executor/: layers.py  llama_attention.py
runtime/src/rec_llm_runtime/model_executor/models/: llama.py
runtime/src/rec_llm_runtime/ops/: paged_cache.py  prefill_attention.py  rope.py
runtime/src/rec_llm_runtime/runtime/: decode_mvp.py  kv_cache.py
scripts/: bench_decode_mvp.py  colab_tiny_llama_smoke.py
tests/: test_build.py  test_kernels.py  test_llama_layer.py  test_paged_attention_decode.py  test_paged_cache.py  test_rms_norm.py
tests_contract/: test_decode_mvp_cpu.py
tests_cuda/: test_flashinfer_prefill_attention.py  test_llama_attention_prefill_decode.py  test_llama_layer.py  test_paged_attention_decode_v2_flashinfer.py  test_paged_kv_cache_prefill.py  test_rope.py
tests_inf2/: test_neuron_backend_ops.py
tests_neuron/: README.md
tests_neuron/legacy_tests_inf2/: test_neuron_backend_ops.py  test_neuron_flash_attention.py
