[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rec-llm-runtime"
version = "0.1.0"
description = "Minimal LLM inference runtime (decode-only MVP scaffolding)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["rec_llm_runtime*"]

[tool.setuptools.package-dir]
"" = "src"

